# Ilex_Logistica

./: .PR_COMMENTARY.md  .env.example  .gitignore  AGENTS.md  ARQUITETURA.md  AUDITORIA.md  AUDITORIA_PROJETO.md  BANCO_DADOS.md  CONTEXTO.md  ESCOPO.md  ESCOPO_PROJETO_ILEX_LOGISTICA_APENDICE_1.md  LOCAL_SETUP.md  MATRIZ_REQUISITOS.md  PROMPT_GOVERNANCE_TEMPLATE.md  README.md  RELATORIO.md  RELATORIO_DIA.md  RESUMO_AUDITORIA.md  ROADMAP.md  ROADMAP_ATUALIZADO.md  ROADMAP_BETA.md  Runbook.md  TAREFAS_PARA_CONCLUSAO.md  beta019b_backend_targeted_current.txt  docker-compose.yml  infra_checks.py  middleware.ts  package-lock.json  package.json  prs.json  prs_clean.json  prs_full.json  prs_simple.json  pyproject.toml  vitest.config.ts
app/: main.py
apps/api/: .gitignore  README.md  alembic.ini  pyproject.toml  seed_demo.py
apps/api/app/: main.py
apps/api/migrations/: env.py
apps/api/tests/: conftest.py  fixtures_synthetic_e2e.py  test_alert_delivery_log_model.py  test_alerts_api.py  test_alerts_generation.py  test_alerts_model.py  test_audit_log_api.py  test_audit_log_api_e2e.py  test_audit_log_integrations.py  test_audit_log_model.py  test_audit_log_service.py  test_auth.py  test_auth_policies.py  test_beta_e2e_homologation_flow.py  test_braspress_assisted_import.py  test_braspress_documented_flow.py  test_carrier_efficiency_api.py  test_carrier_efficiency_report.py  test_carriers.py  test_cobranca_api.py  test_cobranca_scheduler.py  test_cobranca_service.py  test_daily_report_api.py  test_daily_report_api_e2e.py  test_daily_report_export.py  test_daily_report_generation.py  test_daily_report_integration.py  (+53 more)
(+541 files in other folders)
