[project]
name = "ilex-api"
version = "0.1.0"
description = "API fundacional do Ilex Logistica"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg2-binary>=2.9.9",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
