[project]
name = "ilex-api"
version = "0.1.0"
description = "API fundacional do Ilex Logistica"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg2-binary>=2.9.9",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.9.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["performance: deterministic local performance gates"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
